@@ -21,5 +21,5 @@ TO DO LIST
 * Allow users to start the addon themselves using the "program addons" feature too.
 * Create a single query depending on the type of file to delete (movie/episode). At the moment we write the same query twice, only slightly different.
 * Do not catch each and every type of exception, but only the ones we will handle ourselves
-* Fix low disk space measuring, as the currently used module (statvfs) is deprecated since Python 2.6
+* Fix low disk space measuring for non-Windows OSes
 * Display one message with the number of files deleted, if more than one, instead of displaying each message individually
